--- a/public/css/clash-display.css
+++ b/public/css/clash-display.css
@@ -19,8 +19,7 @@
 @font-face {
   font-family: 'ClashDisplay-Extralight';
   src: url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Extralight.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff') format('woff');
   font-weight: 200;
   font-display: swap;
   font-style: normal;
@@ -28,8 +27,7 @@
 @font-face {
   font-family: 'ClashDisplay-Light';
   src: url('../fonts/ClashDisplay/ClashDisplay-Light.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Light.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Light.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Light.woff') format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
@@ -37,8 +35,7 @@
 @font-face {
   font-family: 'ClashDisplay-Regular';
   src: url('../fonts/ClashDisplay/ClashDisplay-Regular.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Regular.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Regular.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -46,8 +43,7 @@
 @font-face {
   font-family: 'ClashDisplay-Medium';
   src: url('../fonts/ClashDisplay/ClashDisplay-Medium.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Medium.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Medium.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Medium.woff') format('woff');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -55,8 +51,7 @@
 @font-face {
   font-family: 'ClashDisplay-Semibold';
   src: url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Semibold.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff') format('woff');
   font-weight: 600;
   font-display: swap;
   font-style: normal;
@@ -64,8 +59,7 @@
 @font-face {
   font-family: 'ClashDisplay-Bold';
   src: url('../fonts/ClashDisplay/ClashDisplay-Bold.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Bold.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Bold.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Bold.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
@@ -81,8 +75,7 @@
 @font-face {
   font-family: 'ClashDisplay-Variable';
   src: url('../fonts/ClashDisplay/ClashDisplay-Variable.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Variable.woff') format('woff'),
-       url('../fonts/ClashDisplay/ClashDisplay-Variable.ttf') format('truetype');
+       url('../fonts/ClashDisplay/ClashDisplay-Variable.woff') format('woff');
   font-weight: 200 700;
   font-display: swap;
   font-style: normal;
