--- a/public/css/clash-display.css
+++ b/public/css/clash-display.css
@@ -18,48 +18,54 @@
 */
 @font-face {
   font-family: 'ClashDisplay-Extralight';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Extralight.woff') format('woff');
   font-weight: 200;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'ClashDisplay-Light';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Light.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Light.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Light.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Light.woff') format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'ClashDisplay-Regular';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Regular.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Regular.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Regular.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'ClashDisplay-Medium';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Medium.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Medium.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Medium.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Medium.woff') format('woff');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'ClashDisplay-Semibold';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Semibold.woff') format('woff');
   font-weight: 600;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'ClashDisplay-Bold';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Bold.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Bold.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Bold.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Bold.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
@@ -74,8 +80,9 @@
 */
 @font-face {
   font-family: 'ClashDisplay-Variable';
-  src: url('../fonts/ClashDisplay/ClashDisplay-Variable.woff2') format('woff2'),
-       url('../fonts/ClashDisplay/ClashDisplay-Variable.woff') format('woff');
+  src:
+    url('../fonts/ClashDisplay/ClashDisplay-Variable.woff2') format('woff2'),
+    url('../fonts/ClashDisplay/ClashDisplay-Variable.woff') format('woff');
   font-weight: 200 700;
   font-display: swap;
   font-style: normal;
